--- a/runtime diplom work/index.html
+++ b/runtime diplom work/index.html
@@ -34,15 +34,11 @@
     </div>
 </header>
 
-
-<div class="page">
-
     <!-- Intro -->
     <div class="intro" id="intro">
         <div class="container">
             <div class="intro__inner">
                 <h1 class="intro__title">Welcome to Runtime</h1>
-
                 <a class="btn" href="#">Learn More</a>
             </div>
         </div>
@@ -70,7 +66,7 @@
             </div>
         </div>
 
-    </div><!-- /.intro -->
+    </div>
 
 
     <!-- About -->
@@ -114,7 +110,7 @@
                 </div>
             </div>
 
-        </div><!-- /.container -->
+        </div>
     </section>
 
 
@@ -197,7 +193,7 @@
                 </div>
             </div>
 
-        </div><!-- /.container -->
+        </div>
     </section>
 
 
@@ -219,7 +215,7 @@
     </section>
 
 
-    <!-- Wedo -->
+    <!-- We-do -->
     <section class="section">
         <div class="container">
 
@@ -268,16 +264,16 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                             </div>
                         </div>
-                    </div><!-- /.accordion -->
+                    </div>
 
-                </div><!-- /.wedo__item -->
-            </div><!-- /.wedo -->
+                </div>
+            </div>
 
         </div>
     </section>
 
 
-    <!-- Reviews 1 -->
+    <!-- Review 1 -->
     <div class="section  section--gray">
         <div class="container">
 
@@ -328,7 +324,7 @@
                         <div class="card__name">Matthew Dix</div>
                         <div class="card__prof">Graphic Design</div>
                     </div>
-                </div><!-- /.card__item -->
+                </div>
 
                 <div class="card__item">
                     <div class="card__inner">
@@ -340,7 +336,7 @@
                         <div class="card__name">Christopher Campbell</div>
                         <div class="card__prof">Branding/UX design</div>
                     </div>
-                </div><!-- /.card__item -->
+                </div>
 
                 <div class="card__item">
                     <div class="card__inner">
@@ -352,11 +348,9 @@
                         <div class="card__name">Michael Fertig </div>
                         <div class="card__prof">Developer</div>
                     </div>
-                </div><!-- /.card__item -->
-
-            </div><!-- /.card -->
-
-        </div><!-- /.container -->
+                </div>
+            </div>
+        </div>
     </section>
 
 
@@ -462,16 +456,13 @@
                     </div>
                 </div>
             </div>
-        </div><!-- /.works -->
+        </div>
     </section>
 
-
-    <!-- Reviews 2 -->
+    <!-- Review 2 -->
     <div class="section">
         <div class="container">
-
             <div class="reviews">
-
                 <div data-slider>
                     <div>
                         <div class="reviews__item">
@@ -493,7 +484,6 @@
 
         </div>
     </div>
-
 
     <!-- Clients -->
     <section class="section  section--clients">
@@ -540,9 +530,8 @@
                         <div class="clients__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
                     </div>
                 </div>
-            </div><!-- /.clients -->
-
-        </div><!-- /.container -->
+            </div>
+        </div>
     </section>
 
 
@@ -639,13 +628,11 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- /.blog -->
-
-        </div><!-- /.container -->
+            </div>
+        </div>
     </section>
 
-
-    <!-- Map -->
+    <!--Map-->
     <section class="section  section--map">
         <div class="container">
             <div class="map">
@@ -657,8 +644,7 @@
         </div>
     </section>
 
-
-    <!-- Footer -->
+    <!--Footer-->
     <footer class="footer" id="footer">
         <div class="container">
 
@@ -701,7 +687,7 @@
                         <input class="subscribe__input" type="email" name="name" placeholder="Your Email...">
                         <button class="subscribe__btn" type="submit">Subscribe</button>
                     </form>
-                </div><!-- /.footer__col -->
+                </div>
 
                 <div class="footer__col  footer__col--second">
                     <div class="footer__title">Blogs</div>
@@ -730,7 +716,7 @@
                                 <div class="blogs__date">Jan 9, 2016</div>
                             </div>
                         </div>
-                    </div><!-- /.blogs -->
+                    </div>
                 </div>
 
                 <div class="footer__col  footer__col--third">
@@ -766,24 +752,16 @@
                         </a>
                     </div>
                 </div>
-
-            </div><!-- /.footer__inner -->
-
+            </div>
             <div class="copyright">
                 © 2020 <a href="https://github.com/Alikhan718" class="">Alikhan Seitkadyrov</a>
             </div>
-
-        </div><!-- /.container -->
+        </div>
     </footer>
-
-</div><!-- /.page -->
-
-
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/app.js"></script>
-
 
 </body>
 </html>
